# evelynn-cli

./: .gitignore  Cargo.toml  README.md  evelynn_cli_config.example.toml
src/: cli.rs  config.rs  lib.rs  main.rs
src/modules/: ssh.rs
