[package]
name = "evelynn-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive" ]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
toml = "0.7"
reqwest = { version = "0.11", features = ["json"] }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }